--- a/SpringBootAgJs_CRUD/SpringBootAgJs/pom.xml
+++ b/SpringBootAgJs_CRUD/SpringBootAgJs/pom.xml
@@ -85,6 +85,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.40</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
