Add dependencies an methods in restController

--- a/SpringBootAgJs_CRUD/SpringBootAgJs/src/main/resources/application.yml
+++ b/SpringBootAgJs_CRUD/SpringBootAgJs/src/main/resources/application.yml
@@ -6,7 +6,7 @@ datasource:
     driverClassName: com.mysql.jdbc.Driver
     maxPoolSize: 20
     hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
+      hbm2ddl.method: update
+      show_sql:   true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect 
